fix position overflow issue

--- a/index.html
+++ b/index.html
@@ -17,92 +17,106 @@
   <body>
     <div class="container">
       <div class="card">
+        <img
+          class="box"
+          src="/images/illustration-box-desktop.svg"
+          alt="box illustration desktop"
+        />
         <div class="illustration">
-          <img src="/images/bg-pattern-desktop.svg" alt="pattern desktop">
-          <img src="/images/illustration-woman-online-desktop.svg" alt="woman shopping desktop">
-          <img src="/images/illustration-box-desktop.svg" alt="box illustration desktop">
+          <img
+            class="pattern"
+            src="/images/bg-pattern-desktop.svg"
+            alt="pattern desktop"
+          />
+          <img
+            class="lady"
+            src="/images/illustration-woman-online-desktop.svg"
+            alt="woman shopping desktop"
+          />
         </div>
 
         <div class="faq">
-          <h1>FAQ</h1>
-          <div class="question-container">
-            <div class="shown-content">
-              <p class="question">How many team members can I invite?</p>
-              <button>
-                <img
-                  src="/images/icon-arrow-down.svg"
-                  alt="open content arrow"
-                />
-              </button>
-            </div>
-            <p class="hidden-content">
-              You can invite up to 2 additional users on the Free plan. There is
-              no limit on team members for the Premium plan.
-            </p>
-          </div>
-
-          <div class="question-container">
-            <div class="shown-content">
-              <p class="question">What is the maximum file upload size?</p>
-              <button>
-                <img
-                  src="/images/icon-arrow-down.svg"
-                  alt="open content arrow"
-                />
-              </button>
-            </div>
-            <p class="hidden-content">
-              No more than 2GB. All files in your account must fit your allotted
-              storage space.
-            </p>
-          </div>
-          <div class="question-container">
-            <div class="shown-content">
-              <p class="question">How do I reset my password?</p>
-              <button>
-                <img
-                  src="/images/icon-arrow-down.svg"
-                  alt="open content arrow"
-                />
-              </button>
+          <div class="faq-content">
+            <h1>FAQ</h1>
+            <div class="question-container">
+              <div class="shown-content">
+                <p class="question">How many team members can I invite?</p>
+                <button>
+                  <img
+                    src="/images/icon-arrow-down.svg"
+                    alt="open content arrow"
+                  />
+                </button>
+              </div>
+              <p class="hidden-content">
+                You can invite up to 2 additional users on the Free plan. There
+                is no limit on team members for the Premium plan.
+              </p>
             </div>
 
-            <p class="hidden-content">
-              Click “Forgot password” from the login page or “Change password”
-              from your profile page. A reset link will be emailed to you.
-            </p>
-          </div>
-          <div class="question-container">
-            <div class="shown-content">
-              <p class="question">Can I cancel my subscription?</p>
-              <button>
-                <img
-                  src="/images/icon-arrow-down.svg"
-                  alt="open content arrow"
-                />
-              </button>
+            <div class="question-container">
+              <div class="shown-content">
+                <p class="question">What is the maximum file upload size?</p>
+                <button>
+                  <img
+                    src="/images/icon-arrow-down.svg"
+                    alt="open content arrow"
+                  />
+                </button>
+              </div>
+              <p class="hidden-content">
+                No more than 2GB. All files in your account must fit your
+                allotted storage space.
+              </p>
             </div>
+            <div class="question-container">
+              <div class="shown-content">
+                <p class="question">How do I reset my password?</p>
+                <button>
+                  <img
+                    src="/images/icon-arrow-down.svg"
+                    alt="open content arrow"
+                  />
+                </button>
+              </div>
 
-            <p class="hidden-content">
-              Yes! Send us a message and we’ll process your request no questions
-              asked.
-            </p>
-          </div>
-          <div class="question-container">
-            <div class="shown-content">
-              <p class="question">Do you provide additional support?</p>
-              <button>
-                <img
-                  src="/images/icon-arrow-down.svg"
-                  alt="open content arrow"
-                />
-              </button>
+              <p class="hidden-content">
+                Click “Forgot password” from the login page or “Change password”
+                from your profile page. A reset link will be emailed to you.
+              </p>
             </div>
+            <div class="question-container">
+              <div class="shown-content">
+                <p class="question">Can I cancel my subscription?</p>
+                <button>
+                  <img
+                    src="/images/icon-arrow-down.svg"
+                    alt="open content arrow"
+                  />
+                </button>
+              </div>
 
-            <p class="hidden-content">
-              Chat and email support is available 24/7. Phone lines are open
-              during normal business hours.
-            </p>
+              <p class="hidden-content">
+                Yes! Send us a message and we’ll process your request no
+                questions asked.
+              </p>
+            </div>
+            <div class="question-container">
+              <div class="shown-content">
+                <p class="question">Do you provide additional support?</p>
+                <button>
+                  <img
+                    src="/images/icon-arrow-down.svg"
+                    alt="open content arrow"
+                  />
+                </button>
+              </div>
+
+              <p class="hidden-content">
+                Chat and email support is available 24/7. Phone lines are open
+                during normal business hours.
+              </p>
+            </div>
           </div>
         </div>
       </div>
