add mobile style

--- a/index.html
+++ b/index.html
@@ -29,6 +29,16 @@
             alt="pattern desktop"
           />
           <img
+            class="pattern-mobile"
+            src="/images/bg-pattern-mobile.svg"
+            alt="pattern mobile"
+          />
+          <img
+            class="woman-mobile"
+            src="/images/illustration-woman-online-mobile.svg"
+            alt="woman illustration mobile"
+          />
+          <img
             class="lady"
             src="/images/illustration-woman-online-desktop.svg"
             alt="woman shopping desktop"
