--- a/index.html
+++ b/index.html
@@ -25,22 +25,22 @@
         <div class="illustration">
           <img
             class="pattern"
-            src="/images/bg-pattern-desktop.svg"
+            src="./images/bg-pattern-desktop.svg"
             alt="pattern desktop"
           />
           <img
             class="pattern-mobile"
-            src="/images/bg-pattern-mobile.svg"
+            src="./images/bg-pattern-mobile.svg"
             alt="pattern mobile"
           />
           <img
             class="woman-mobile"
-            src="/images/illustration-woman-online-mobile.svg"
+            src="./images/illustration-woman-online-mobile.svg"
             alt="woman illustration mobile"
           />
           <img
             class="lady"
-            src="/images/illustration-woman-online-desktop.svg"
+            src="./images/illustration-woman-online-desktop.svg"
             alt="woman shopping desktop"
           />
         </div>
@@ -53,7 +53,7 @@
                 <p class="question">How many team members can I invite?</p>
                 <button>
                   <img
-                    src="/images/icon-arrow-down.svg"
+                    src="./images/icon-arrow-down.svg"
                     alt="open content arrow"
                   />
                 </button>
@@ -69,7 +69,7 @@
                 <p class="question">What is the maximum file upload size?</p>
                 <button>
                   <img
-                    src="/images/icon-arrow-down.svg"
+                    src="./images/icon-arrow-down.svg"
                     alt="open content arrow"
                   />
                 </button>
@@ -84,7 +84,7 @@
                 <p class="question">How do I reset my password?</p>
                 <button>
                   <img
-                    src="/images/icon-arrow-down.svg"
+                    src="./images/icon-arrow-down.svg"
                     alt="open content arrow"
                   />
                 </button>
@@ -100,7 +100,7 @@
                 <p class="question">Can I cancel my subscription?</p>
                 <button>
                   <img
-                    src="/images/icon-arrow-down.svg"
+                    src="./images/icon-arrow-down.svg"
                     alt="open content arrow"
                   />
                 </button>
@@ -116,7 +116,7 @@
                 <p class="question">Do you provide additional support?</p>
                 <button>
                   <img
-                    src="/images/icon-arrow-down.svg"
+                    src="./images/icon-arrow-down.svg"
                     alt="open content arrow"
                   />
                 </button>
